Made changes in frontend

--- a/src/main/resources/static/css/admin-announcements.css
+++ b/src/main/resources/static/css/admin-announcements.css
@@ -111,7 +111,7 @@ body {
   }
   
   .add-announcement-btn:hover {
-    background-color: #123456;
+    background-color: #0056b3;
   }
   
   /* Announcements list */
