--- a/src/main/resources/static/css/events.css
+++ b/src/main/resources/static/css/events.css
@@ -14,12 +14,13 @@ body {
 /* Navbar */
 /* Navbar Styles */
 .navbar {
-    background-color: #0d1b2a;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    color: white;
+  background-color: #0d1b2a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  color: white;
+
 }
 
 .logo-container {
@@ -39,20 +40,13 @@ body {
   color: #ffffff;
 }
 
-.nav-right {
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-}
 
 .nav-right a {
+  margin: 0 12px;
+  color: white;
   text-decoration: none;
-  color: #f5f5f5; /* Smoky white */
-  font-size: 1rem;
   font-weight: 500;
-  transition: color 0.3s ease;
 }
-
  
 .nav-right a:hover,
   .nav-right a.active {
