--- a/src/main/resources/static/css/volunteer-dashboard.css
+++ b/src/main/resources/static/css/volunteer-dashboard.css
@@ -1,5 +1,11 @@
 /* volunteer-dashboard-updated.css */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
@@ -20,7 +26,7 @@ body {
 .nav-left {
   display: flex;
   align-items: center;
-  gap: 12px; /* spacing between logo and text */
+  gap: 0.5rem;
 }
 
 .logo {
@@ -54,9 +60,9 @@ body {
   }
 
 .logout-btn {
-  margin-left: 20px;
-  background-color: #e53935; /* Red */
-  color: white;
+  margin-left: 10px;
+  background-color: #e53935;
+  color: white !important;
   border: none;
   padding: 8px 16px;
   font-size: 15px;
@@ -204,7 +210,7 @@ textarea {
   background-color: #0d1b2a;
   color: #fff;
   text-align: center;
-  padding: 15px 0;
+  padding: 30px 0;
   font-size: 0.95rem;
   position: relative;
   bottom: 0;
